# NetScanAnalytics

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  asciiart.txt  cmake_install.cmake  logfile.txt  run.sh
include/: Logger.h  analysis.h  csv_loader.h  data_loader.h  data_loader_factory.h  distributor.h  json_loader.h  xml_loader.h
src/: analysis.cpp  data_loader.cpp  distributor.cpp  main.cpp
src/loader/: csv_loader.cpp  data_loader_factory.cpp  json_loader.cpp  xml_loader.cpp
src/utils/: Logger.cpp
